<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="playlist_maker">Playlist Maker</string>
    <string name="button_search">Поиск</string>
    <string name="button_collection">Медиатека</string>
    <string name="button_settings">Настройки</string>
    <string name="main_search">Поиск</string>
    <string name="main_settings">Настройки</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="settings_support">Написать в поддержку</string>
    <string name="share">Поделиться приложением</string>
    <string name="dark_theme">Темная тема</string>
    <string name="collection">Медиатека</string>
</resources>